cordova apk gen

--- a/www/templates/browse.html
+++ b/www/templates/browse.html
@@ -1,5 +1,91 @@
-<ion-view view-title="Browse">
+<ion-view view-title="Timeline">
   <ion-content>
-    <h1>Browse</h1>
+
+  <div class="list card">
+
+  <div class="item item-avatar">
+    <img src="img/photo.png">
+    <h2>Rakesh Mehra</h2>
+    <p>January 22, 2015</p>
+  </div>
+
+  <div class="item item-body">
+    <!-- <img class="full-image" src="delorean.jpg"> -->
+    <p>
+      Donated blood to Vivek. Feeling happy. Donate blood, save life.
+    </p>
+    <p>
+      <a href="#" class="subdued">1 Like</a>
+      <a href="#" class="subdued">5 Comments</a>
+    </p>
+  </div>
+
+  <div class="item tabs tabs-secondary tabs-icon-left">
+    <a class="tab-item" href="#">
+      <i class="icon ion-thumbsup"></i>
+      Like
+    </a>
+    <a class="tab-item" href="#">
+      <i class="icon ion-chatbox"></i>
+      Comment
+    </a>
+    <a class="tab-item" href="#">
+      <i class="icon ion-share"></i>
+      Share
+    </a>
+  </div>
+
+</div>
+
+<div class="list card">
+
+  <div class="item item-avatar">
+    <img src="img/ayush.jpg">
+    <h2>Ayush Sharma</h2>
+    <p>January 22, 2015</p>
+  </div>
+
+  <div class="item item-body">
+    <!-- <img class="full-image" src="delorean.jpg"> -->
+    <p>
+      Thank you Rakesh.
+    </p>
+    <p>
+      <a href="#" class="subdued">17 Like</a>
+      <a href="#" class="subdued">7 Comments</a>
+    </p>
+  </div>
+
+  <div class="item tabs tabs-secondary tabs-icon-left">
+    <a class="tab-item" href="#">
+      <i class="icon ion-thumbsup"></i>
+      Like
+    </a>
+    <a class="tab-item" href="#">
+      <i class="icon ion-chatbox"></i>
+      Comment
+    </a>
+    <a class="tab-item" href="#">
+      <i class="icon ion-share"></i>
+      Share
+    </a>
+  </div>
+
+</div>
+
+ <!--  <div class="card">
+  <div class="item item-text-wrap">
+    <div class="list">
+
+    <a class="item item-avatar" href="#">
+      <img src="img/photo.png">
+      <h2>Rakesh Mehra</h2>
+      <p>Donated blood to Vivek, Feeling Happy</p>
+    </a>
+
+	</div>
+  </div>
+</div> -->
+    
   </ion-content>
 </ion-view>
