--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -12,9 +12,9 @@
   					I need blood
 				</a>
 				<br><br>
-				<button class="button button-outline button-light">
+				<a class="button button-outline button-light" href="#/app/alert">
   					I want to Volunteer
-				</button>
+				</a>
 				<h5 style="color:#fff;"><b>Already a Member ?</b> <a  style="cursor:pointer;" ng-click="login()">Sign In</a></h5>
 			</div>
 		</div>
