--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,7 +1,7 @@
 <ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
- <!--      <ion-nav-back-button>
+     <!--  <ion-nav-back-button>
       </ion-nav-back-button> -->
 
       <ion-nav-buttons side="left">
@@ -28,7 +28,10 @@
           Profile
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/browse">
-          Notifications
+          Timeline
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/alert">
+          Blood Request <span class="badge badge-assertive">4</span>
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/request">
           Find A Donor
