--- a/www/templates/alert.html
+++ b/www/templates/alert.html
@@ -11,7 +11,7 @@
 
   <a class="item item-icon-left assertive" ng-click="openVol()">
     <i class="icon ion-waterdrop"></i>
-    Dobate Blood
+    Donate Blood
   </a>
 
 </div>
