--- a/www/templates/request.html
+++ b/www/templates/request.html
@@ -4,7 +4,7 @@
  <div class="card">
   <div class="item item-text-wrap text-center">
     <h5>What's the type of Blood are you looking for ?</h5>
-    <select style="border:0px; border-radius:0px; font-size:8px; color:#fff; font-weight:bold; padding:5px; background-color:#F34336;">
+    <select data-ng-model="log.bgroup" style="border:0px; border-radius:0px; font-size:8px; color:#fff; font-weight:bold; padding:5px; background-color:#F34336;">
     	<option>A+</option>
     	<option>A-</option>
     	<option>B+</option>
